@@ -4,34 +4,19 @@
 	<title>The rationale of threaded bridges</title>
     <para>
     	
-    	The 'bridge' concept was introduced
-    	to cope with the ability of the Apache HTTP web server
-    	to adopt different multiprocessing models implemented by 
-    	one of the available MPMs (Multi Processing Modules). 
-    	Threaded MPMs (worker, winnt) serve
-    	requests from within single threads but the Apache web server
-    	architecture demands each module to be MPM agnostic and 
-    	offers to a module developer no way to hook callbacks
-    	in important transitions like a worker thread termination.
-    	Furthermore Tcl itself doesn't fit very well in this scheme
-    	because a threaded Tcl_Interp* object spins its own ancillary 
-    	threads, for example to control the event loop.
-    	Even if we could plug a callback function into the thread
-    	exit transition on many platforms and thread implementations
-    	we could not be guaranteed that data release functions will be 
-    	called from within the same thread that allocated that
-    	thread private memory. When releasing a Tcl intpreter 
-    	from such function the Tcl C library would get the wrong private 
-    	memory pointer or a NULL pointer, opening the way to crashes.
-    	Furthermore the bridge solution enables us to develop different
-    	threaded models of workload management and therefore it's much 
-    	more flexible that a adopting a single monolithic code design. 
+    	The 'bridge' concept was introduced to cope with the ability of 
+    	the Apache HTTP web server to adopt different multiprocessing 
+    	models loading one of the available MPMs (Multi Processing Modules). 
+		A bridge primary task is to adapt mod_rivet internal calls so that it fits
+		the running multiprocessing model, but separating mod_rivet core 
+		function from the MPM machinery worked also a solution for
+		a flexible and extensible approach to workload and resource management. 
    </para>
 	</section>
 	<section>
 	 <title>Lazy bridge data structures</title>
     <para>
-	   The lazy bridge was developed to outline the basic tasks
+	   The lazy bridge was initially developed to outline the basic tasks
     	carried out by each function making a rivet MPM bridge. 
     	The lazy bridge attempts to be minimalistic
     	but it's nearly fully functional, only a few configuration
