@@ -1,3 +1,7 @@
+2016-09-06 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/lazybridge.xml: further lazybridge documentation 
+    development
+
 2016-07-11 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/form/form2.tcl,rivet/pkgIndex.tcl: bump up package
     form version to 2.1
